--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -13,7 +13,7 @@
     Source: https://www.webmd.com
   </p>
   <br />
-
+<img src="https://cdn.jsdelivr.net/gh/CarlosUson1/BMI-Calculator@master/bmi%20pic.png">
 <ion-item>
   <ion-label>Height in Meter:</ion-label>
   <ion-input type="number" [(ngModel)]="height"></ion-input>
